从文件中读取公钥和私钥